[gd_scene load_steps=3 format=3 uid="uid://dyowxyepevcce"]

[ext_resource type="Script" path="res://Scripts/EventScreen.gd" id="1_jibbi"]
[ext_resource type="Theme" uid="uid://boae5h5x4m1gb" path="res://Themes/buttons.tres" id="2_87eyh"]

[node name="EventScreen" type="CanvasLayer"]
script = ExtResource("1_jibbi")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Message"
horizontal_alignment = 1

[node name="Choice1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -35.0
offset_right = 150.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_87eyh")
text = "Choice1"

[node name="Choice2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 65.0
offset_right = 150.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_87eyh")
text = "Choice2"

[connection signal="pressed" from="Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="Choice2" to="." method="_on_choice_2_pressed"]
